--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "axios": "^1.6.1",
-        "bootstrap": "^5.2.3",
+        "bootstrap": "^5.3.2",
         "laravel-vite-plugin": "^0.8.1",
         "sass": "^1.56.1",
         "vite": "^4.5.1"
+    },
+    "dependencies": {
+        "select2": "^4.1.0-rc.0"
     }
 }
